--- a/app/src/main/res/layout/activity_armain.xml
+++ b/app/src/main/res/layout/activity_armain.xml
@@ -5,4 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.p532.arbusschedules.ARMainActivity">
+
+    <include
+        layout="@layout/content_main"/>
+
 </android.support.constraint.ConstraintLayout>
