--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:background="#005C6BC0"
+    android:background="@color/card_content_main_bg"
     tools:context=".ARMainActivity"
     tools:showIn="@layout/activity_armain">
 
