--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,45 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.p532.arbusschedules.SplashActivity">
+    tools:context="com.p532.arbusschedules.SplashActivity"
+    android:background="@drawable/splash_bg">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#5C6BC0">
+    <ImageView
+        android:id="@+id/splash_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrival_logo"
+        android:layout_marginTop="@dimen/splash_img_margin_top"
+        android:layout_marginLeft="@dimen/splash_img_margin_left_right"
+        android:layout_marginRight="@dimen/splash_img_margin_left_right"/>
 
-        <TextView
-            android:id="@+id/appName_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:layout_centerHorizontal="true"
-            android:textSize="50dp"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:layout_marginTop="150dp"
-            android:text="@string/app_name"/>
-        <ImageView
-            android:id="@+id/splashImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/appName_textView"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/ic_bus_image"
-            android:layout_centerHorizontal="true"/>
+    <com.comix.overwatch.HiveProgressView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/splash_loading"
+        android:layout_below="@id/splash_logo"
+        android:layout_width="@dimen/splash_loading_size"
+        android:layout_height="@dimen/splash_loading_size"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/splash_loading_margin_top"
+        android:layout_marginBottom="@dimen/splash_loading_margin_bottom"
+        android:layout_gravity="center"
+        app:hive_animDuration="3000"
+        app:hive_color="@color/hive"
+        app:hive_maxAlpha="255"
+        app:hive_rainbow="false"
+        app:hive_cornerRadius="8"
+        app:hive_shrink="true" />
 
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/loadingIndicator"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_below="@+id/splashImage"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
-            app:indicatorName="PacmanIndicator"/>
-
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
